--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -15,7 +15,7 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          port: 22
+          port: 65002
           local_path: './*'
-          remote_path: './360.creatxsoftware.com/'
+          remote_path: './domains/care36t5.com/public_html'
           sftp_only: true
